--- a/src/components/VideoCard.css
+++ b/src/components/VideoCard.css
@@ -11,8 +11,10 @@
   
   .video-card img {
     width: 100%;
-    height: auto;
+    height: 200px;
     margin-bottom: 10px;
+    object-fit: cover;
+
   }
   
   .video-card h4 {
