--- a/src/components/Videos.css
+++ b/src/components/Videos.css
@@ -1,7 +1,7 @@
 .video-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
   }
 
