--- a/src/components/Videos.css
+++ b/src/components/Videos.css
@@ -3,6 +3,8 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    /* width: 100px;
+    height: 100px; */
   }
 
 
