--- a/src/components/VideoCard.css
+++ b/src/components/VideoCard.css
@@ -4,8 +4,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 250px; /* Adjust the width as needed */
-    height: 300px; /* Adjust the height as needed */
+    width: 250px; 
+    height: 300px; 
     margin: 20px;
   }
   
