--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 30px; 
+    justify-content: space-between;
   }
   
   input[type="text"] {
