--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -1,15 +1,17 @@
 .search-bar-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
-
-input[type="text"] {
-    width: 500px; /* Adjust the width as needed */
+    margin-bottom: 30px; 
+    justify-content: space-between;
+  }
+  
+  input[type="text"] {
+    width: 500px;
     margin-top: 30px;
-}
-
-.search-button {
+  }
+  
+  .search-button {
     background-color: red;
     color: white;
     border: none;
@@ -19,8 +21,17 @@ input[type="text"] {
     padding-right: 20px;
     margin-top: 30px;
     cursor: pointer;
-}
-
-.search-button i {
+  }
+  
+  .search-button i {
     vertical-align: middle;
-}
+  }
+  
+  .no-results-message {
+    margin-top: 10px; 
+    color: white;
+    text-align: center;
+    background-color: red;
+    padding: 10px;
+    border-radius: 5px;
+  }
